# gimp-vtf

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  tc-windows-mingw.cmake
.github/workflows/: cmake-multi-platform.yml
src/: file-vtf.cpp  file-vtf.h
